--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,1 +1,16 @@
-<%= render 'form', post: Post.new %>
+<%= form_for @post do |f| %>
+<%= f.label :title %><br>
+<%= f.text_field :title %><br>
+<%= f.label :content %><br>
+<%= f.text_area :content %><br>
+<%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
+<%= f.fields_for :categories, @post.categories.build do |c| %><br>
+    <%= c.label :name%>
+    <%= c.text_field :name %>
+    <% end %>
+
+
+
+<%= f.submit %>
+<% end %>
+
