--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,8 @@
 
+   <h1>User: <%= @user.username %> </h1>
+
+   <h4>Posts:</h4>
+    <% @user.posts.uniq.each do |post| %>
+       <li> <%= link_to post.title, post_path(post) %></li>
+    <% end %>
+    
